[modify] VendingMachine producList를 productMap으로 변경 후 Main에서 예시를 통해 로직 다른 부분있는지 확인